Spark setup with multi module and servlet dependency